# Course_work_for_unit_3

./: README.md  pyproject.toml
course-work-for-unit-3/: func.py
course_work_for_unit_3/: func.py  main.py
tests/: test_func.py
